fix(pom): give surefire more memory because of OOM-error