@@ -62,6 +62,9 @@
 					<groupId>org.apache.maven.plugins</groupId>
 					<artifactId>maven-surefire-plugin</artifactId>
 					<version>2.15</version>
+					<configuration>
+    					<argLine>-Xmx512m -XX:MaxPermSize=256m</argLine>
+  					</configuration>
 				</plugin>
 				<plugin>
 					<groupId>org.apache.maven.plugins</groupId>
